hphp/hack/test/typecheck/lambda/lambda_bad_pos.php.like_types.exp
File "lambda_bad_pos.php", line 21, characters 33-38:
Invalid argument (Typing[4110])
File "lambda_bad_pos.php", line 17, characters 13-15:
Expected Tv1
File "lambda_bad_pos.php", line 16, characters 3-27:
But got dynamic because it is an unenforceable type
File "lambda_bad_pos.php", line 26, characters 34-35:
Invalid return type (Typing[4323])
File "lambda_bad_pos.php", line 6, characters 27-34:
Some type constraint(s) are violated here
File "lambda_bad_pos.php", line 6, characters 21-22:
Tv is a constrained type parameter
File "lambda_bad_pos.php", line 6, characters 27-34:
Expected arraykey
File "lambda_bad_pos.php", line 25, characters 22-22:
But got C
File "hackarray.hhi", line 13, characters 61-61:
  via this generic T
File "interfaces.hhi", line 118, characters 84-85:
  via this generic Tv
File "rx/interfaces.hhi", line 35, characters 60-61:
  via this generic Tv
